--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,6 @@ pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
 telegram==0.0.1
 toolz==0.11.2
-tronpy==0.2.6
+tronpy
 tzdata==2022.1
 tzlocal==4.2
